<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:foreground="?attr/selectableItemBackground"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/app_icon_content_description" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_placeholder_name"
            android:textAppearance="?attr/textAppearanceBodyLarge" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appPackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/app_placeholder_package"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="?attr/colorOnSurfaceVariant" />

    </LinearLayout>
</LinearLayout>
